Change colors and add file upload

--- a/index.html
+++ b/index.html
@@ -2,71 +2,85 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Survey Form</title>
+  <title>Survey Form</title>
   <link rel="stylesheet" href="./style.css">
-
 </head>
+
 <body>
-<!-- partial:index.partial.html -->
-<div id="main">
-  <h1 id="title">Job Application</h1>
-  <p id="description">Please fill out this form as completely as possible.</p>
+  <div id="main">
+    <h1 id="title">Job Application</h1>
+    <p id="description">Please fill out this form as completely as possible.</p>
 
-  <form id=survey-form>
-    <div class="form-group">
-    <label id="name-label" for="name">Name:</label>
-      <input type="text" id="name" placeholder="Enter your full name" required>
-    </div>
+    <form id=survey-form>
+      <div class="form-group">
+      <label id="name-label" for="name">Name:</label>
+        <input type="text" id="name" placeholder="Enter your full name" required>
+      </div>
 
-    <div class="form-group">
-    <label id="email-label" for="email">Email:</label>
-      <input type="email" id="email" placeholder="example@gmail.com" required>
-    </div>
+      <div class="form-group">
+      <label id="email-label" for="email">Email:</label>
+        <input type="email" id="email" placeholder="example@gmail.com" required>
+      </div>
 
-    <div class="form-group">
-    <label id="number-label" for="age">Years of Programming Experience:</label>
-      <input type="number" id="number" min="0" max="70" placeholder="Enter your years of experience">
-    </div>
+      <div class="form-group">
+      <label id="number-label" for="age">Years of Programming Experience:</label>
+        <input type="number" id="number" min="0" max="70" placeholder="Enter your years of experience">
+      </div>
 
-    <div class="form-group">
-  <label id="dropdown" for="role">Which option best describes your current role?</label>
-      <select name="dropdown" id="dropdown">
-        <option value="student">Student</option>
-        <option value="fulltime">Full Time Job</option>
-        <option value="parttime">Part Time Job</option>
-        <option value="unemployed">Unemployed</option>
-      </select>
-    </div>
+      <div class="form-group">
+        <label id="dropdown" for="role">Which option best describes your current role?</label>
+        <select name="dropdown" id="dropdown">
+          <option value="student">Student</option>
+          <option value="fulltime">Full Time Job</option>
+          <option value="parttime">Part Time Job</option>
+          <option value="unemployed">Unemployed</option>
+        </select>
+      </div>
 
-    <div class="form-group">
-   <p>Which area are you strongest in?</p>
-  <label for="backend"> 
-    <input id="backend" value="backend" type="radio" name="strength">Back-end
-  </label>
-  <label for="frontend"> 
-    <input id="frontend" value="frontend" type="radio" name="strength">Front-end
-  </label>
-   <label for="both"> 
-    <input id="both" value="both" type="radio" name="strength">Both equally
-  </label>
-    </div>
-    <div class="form-group">
-      <p>Which languages are you proficient in?</p>
-    <label for="html"><input id="html" value="html" type="checkbox" name="languages"> HTML</label>
-      <label for="css"><input id="css" value="css" type="checkbox" name="languages"> CSS</label>
-      <label for="javascript"><input id="javascript" value="javascript" type="checkbox" name="languages"> Javascript</label><br>
-    </div>
+      <div class="form-group">
+        <p>Which area are you strongest in?</p>
+        <label for="backend"> 
+          <input id="backend" value="backend" type="radio" name="strength">Back-end
+        </label>
+        <label for="frontend"> 
+          <input id="frontend" value="frontend" type="radio" name="strength">Front-end
+        </label>
+        <label for="both"> 
+          <input id="both" value="both" type="radio" name="strength">Both equally
+        </label>
+      </div>
 
-    <div class="form-group">
-    <label for="coverletter">Please write 3-4 sentences on why you are a great fit for this job.</label>
-  <textarea id="w3review" name="w3review" rows="4" cols="50"></textarea>
-    </div>
-  <div class="form-group">
-    <button type="submit" id="submit">Submit</button>
-    </div>
-  </form>
-</div>
-<!-- partial -->
-  
+      <div class="form-group">
+        <p>Which languages are you proficient in?</p>
+        <label for="html"><input id="html" value="html" type="checkbox" name="languages"> HTML</label>
+        <label for="css"><input id="css" value="css" type="checkbox" name="languages"> CSS</label>
+        <label for="javascript"><input id="javascript" value="javascript" type="checkbox" name="languages"> Javascript</label><br>
+      </div>
+
+      <div class="form-group">
+        <label for="coverletter">Please write 3-4 sentences on why you are a great fit for this job.</label>
+        <textarea id="coverletter" name="coverletter" rows="4" cols="50"></textarea>
+      </div>
+
+      <div class="form-group">
+        <label for="upload">Upload your resume and/or cover letter</label>
+        <input type="file" id="file" name="filename">
+      </div>
+    
+      <div class="form-group">
+        <button type="submit" id="submit">Submit</button>
+      </div>
+
+    </form>
+  </div>
+
+  <script>
+    const form = document.getElementById('main');
+    form.addEventListener('submit', (e) => {
+      let name = document.querySelector('#name').value;
+      document.querySelector('#main').innerText = `Thank you, ${name}! We will contact you shortly.`
+      e.preventDefault();
+    });
+  </script>
 </body>
 </html>
